--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,7 +14,7 @@
 #   Browse the latest built-in font sets at https://github.com/wowchemy/wowchemy-hugo-modules/tree/master/wowchemy/themes/
 #   Browse user installed themes in `data/themes/`
 #theme = "minimal"
-theme = "Classic"
+theme = "Ocean"
 
 # Enable users to switch between day and night mode?
 day_night = true
@@ -79,7 +79,7 @@ privacy_pack = false
 edit_page = {repo_url = "", content_dir = "", repo_branch = "main", editable = {page = false, post = false, book = false}}
 
 # Show related content at the bottom of pages?
-show_related = {book = true, page = false, post = true, project = true, publication = true, talk = true}
+show_related = {book = true, page = false, post = false, project = true, publication = true, talk = true}
 
 ############################
 ## Contact details
@@ -152,7 +152,7 @@ address_format = "en-us"
 main_menu = {align = "l", show_logo = false, highlight_active_link = true, show_language = false, show_day_night = true, show_search = true}
 
 # Show estimated reading time for posts? (true/false)
-reading_time = true
+reading_time = false
 
 # Display next/previous section pager? (true/false)
 section_pager = false
