--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,8 +14,8 @@
 #   Browse the latest built-in font sets at https://github.com/wowchemy/wowchemy-hugo-modules/tree/master/wowchemy/themes/
 #   Browse user installed themes in `data/themes/`
 #theme = "minimal"
-#theme = "Ocean"
-theme = "Mr Robot"
+theme = "Ocean"
+#theme = "Mr Robot"
 
 # Enable users to switch between day and night mode?
 day_night = true
