--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -13,9 +13,9 @@
 #   Guide to color themes: https://wowchemy.com/docs/customization/#color-themes
 #   Browse the latest built-in font sets at https://github.com/wowchemy/wowchemy-hugo-modules/tree/master/wowchemy/themes/
 #   Browse user installed themes in `data/themes/`
-theme = "Coffee"
+#theme = "Coffee"
 #theme = "Forest"
-#theme = "minimal"
+theme = "minimal"
 #theme = "Ocean"
 #theme = "Mr Robot"
 
